--- a/zbus-lockstep-macros/Cargo.toml
+++ b/zbus-lockstep-macros/Cargo.toml
@@ -22,9 +22,9 @@ proc-macro = true
 syn = "2.0"
 proc-macro2 = "1.0"
 quote = "1.0"
-zbus-lockstep = { path = "../zbus-lockstep", version = "0.4.4" }
-zbus_xml = { version = "5.0.1", path = "../../zbus/zbus_xml/" }
-zvariant = { version = "5.1", path = "../../zbus/zvariant/" }
+zbus-lockstep = { path = "../zbus-lockstep/", version = "0.4.4" }
+zbus_xml = { version = "5.0.1", git = "https://github.com/TTWNO/zbus/", branch = "direct_propety_access"}
+zvariant = { version = "5.1", git = "https://github.com/TTWNO/zbus/", branch = "direct_propety_access"}
 
 [dev-dependencies]
 version-sync = "0.9"
